Fixed layout issues

--- a/src/styles/facts.scss
+++ b/src/styles/facts.scss
@@ -1,11 +1,11 @@
 .facts__container{
-  /*     background-color: rgba(15, 29, 232, 0.466);  */
       display: flex;
       flex-direction: column;
       justify-content: center;
       align-items: center;
       width: 100vw;
-      margin-top: 180px;  
+      margin-top: 120px;  
+      font-size: 0.8em;
   }
   
 /* ------------------------- */
@@ -14,7 +14,6 @@
 
 .intro__container{
     text-align: center;
-    min-width: 500px;
     max-width: 50%;
     color: var(--brown);
     margin-bottom: 10px;
@@ -35,14 +34,20 @@
 /* 2. Accordion              */
 /* ------------------------- */
 .accordion__container {
+    font-family: sans-serif;
+    font-size: 1.1em;
     max-width: 800px;
     width: 70%;
     margin-bottom: 10px;    
+    
   }
 
   
 /* ---- Before Opening ---- */
 .accordion__header {
+    line-height: 1.5;
+    font-family: sans-serif;
+    font-size: 1em;
     background-color: var(--reddishbrown);
     color: var(--cream);
     padding: 20px 30px;
@@ -50,7 +55,6 @@
     cursor: pointer;
     text-align: left;
     outline: none;
-    font-size: 15px;
     transition: 0.4s;
     width: 100%;
 }
@@ -60,7 +64,7 @@
     color: var(--cream);
     font-weight: bold;
     float: right;
-    margin-left: 5px;
+    margin-right: -5px;
   }
 
 
@@ -77,7 +81,6 @@
   
   .accordion__panel {
     line-height: 1.5;
-    font-family: sans-serif;
     box-sizing: border-box;
     padding: 30px 50px 40px 40px;
     background-color: white;
@@ -87,7 +90,6 @@
 
   .accordion__panel > p {
     margin-bottom: 15px;
-
   }
 
   .accordion__panel > p:last-child{
@@ -101,5 +103,24 @@
 @media (max-width: 800px){
   .facts__container{
       margin-top: 100px;
+  }
+
+  .intro__container{
+    max-width: 90%;
+    width: 100%;
+  }
+
+  .accordion__container {
+    width: 80%; 
+  }
+
+  .accordion__header {
+    font-size: 0.8em;
+    padding: 15px 20px;
+  }
+
+  .accordion__panel {
+    font-size: 0.8em;
+    padding: 20px 35px 30px 30px;
   }
 }
